[package]
name = "czy-piec-siedem"
version = "0.1.0"
authors = ["Michał Sidor <public+git@meekchopp.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
actix-web = { version = "3.3.2", features = ["rustls"] }
quick-js = "0.3.6"
thiserror = "1"
serde = { version = "1" }
